--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,48 +1,20 @@
-<!doctype html>
-{% load static %}
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="{% static 'css/main/base.css' %}">
-    <title>{{ title }}</title>
-</head>
+{% extends 'base.html' %}
 
-<body>
-    <header>
-        <div class="container">
-            <div class="logo">
-                <a href="#">Логотип</a>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#">Новости</a></li>
-                    <li><a href="#">Мероприятия</a></li>
-                </ul>
-            </nav>
-            <div class="search">
-                <input type="text" placeholder="Поиск...">
-                <button>Поиск</button>
-            </div>
-            <div class="auth">
-                <a href="#">Вход</a>
-                <a href="#">Регистрация</a>
-            </div>
+{% block main %}
+    <h2>Кулинарный портал</h2>
+    <div class="d-flex justify-content-between">
+        <div class="col-3">
+            <!-- Sidebar-->
+            {% for category in categories %}
+                {% include 'main/components/_category_buttons.html' %}
+            {% endfor %}
         </div>
-    </header>
-
-    <!-- Основной контент сайта -->
-    <main>
-        <h1>Добро пожаловать на наш сайт!</h1>
-        <p>Здесь будет основной контент сайта.</p>
-    </main>
-
-    <footer>
-        <div class="container">
-            <p>© 2024 Все права защищены.</p>
+        <!-- Posts-->
+        <div class="col-8">
+            <!-- Post-->
+            {% for post in posts %}
+            {% include 'main/components/_post_list.html' %}
+            {% endfor %}
         </div>
-    </footer>
-</body>
-</html>
+    </div>
+{% endblock %}
