--- a/templates/base.html
+++ b/templates/base.html
@@ -1,48 +1,24 @@
 <!doctype html>
-{% load static %}
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="{% static 'css/main/base.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>{{ title }}</title>
 </head>
-
 <body>
-    <header>
-        <div class="container">
-            <div class="logo">
-                <a href="#">Логотип</a>
-            </div>
-            <nav>
-                <ul>
-                    <li><a href="#">Новости</a></li>
-                    <li><a href="#">Мероприятия</a></li>
-                </ul>
-            </nav>
-            <div class="search">
-                <input type="text" placeholder="Поиск...">
-                <button>Поиск</button>
-            </div>
-            <div class="auth">
-                <a href="#">Вход</a>
-                <a href="#">Регистрация</a>
-            </div>
-        </div>
-    </header>
-
-    <!-- Основной контент сайта -->
-    <main>
-        <h1>Добро пожаловать на наш сайт!</h1>
-        <p>Здесь будет основной контент сайта.</p>
-    </main>
-
-    <footer>
-        <div class="container">
-            <p>© 2024 Все права защищены.</p>
-        </div>
-    </footer>
+    <div class="container">
+        {% include 'components/_navbar.html' %}
+        <!-- Main body-->
+        <main>
+            {% block main %}
+            {% endblock %}
+            
+        </main>
+        <!-- Footer-->
+        {% include 'components/_footer.html' %}
+    </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
