--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block main %}
-    <h2>Кулинарный портал</h2>
+    <h2>Ясна Гура</h2>
     <div class="d-flex justify-content-between">
         <div class="col-3">
             <!-- Sidebar-->
