--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -1,14 +1,15 @@
+{% load static %}
 <header>
             <div class="container">
                 <!--   Header-->
                 <nav class="navbar navbar-expand-lg bg-light">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="#!">
-                            <img src="#!" width="75" alt="">
+                        <a class="navbar-brand" href="{% url 'index' %}">
+                            <img src="{% static 'img/Yasna_Gora.jpg' %}" width="75" alt="">
                         </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации"><span class="navbar-toggler-icon"></span></button>
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0"><li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Главная</a></li></ul>
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0"><li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'index' %}">Главная</a></li></ul>
                             <div class="d-flex">
                                 <form class="d-flex" role="search" method="get" action="#!">
                                     <input name="q" class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
