--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -1,38 +1,57 @@
 {% load static %}
 <header>
-            <div class="container">
-                <!--   Header-->
-                <nav class="navbar navbar-expand-lg bg-light">
-                    <div class="container-fluid">
-                        <a class="navbar-brand" href="{% url 'index' %}">
-                            <img src="{% static 'img/Yasna_Gora.jpg' %}" width="75" alt="">
-                        </a>
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации"><span class="navbar-toggler-icon"></span></button>
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0"><li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'index' %}">Главная</a></li></ul>
-                            <div class="d-flex">
-                                <form class="d-flex" role="search" method="get" action="#!">
-                                    <input name="q" class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
-                                    <button class="btn btn-outline-success" type="submit">Поиск</button>
-                                </form>
-                                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                    <!--  Users-->
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                           data-bs-toggle="dropdown" aria-expanded="false">
-                                            Здравствуйте пользователь
-                                        </a>
-                                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                            <li><a class="dropdown-item" href="#!">Моя страница</a></li>
-                                            <li><a class="dropdown-item" href="#!">Добавить статью</a></li>
-                                            <li><hr class="dropdown-divider"></li>
-                                            <li><a class="dropdown-item" href="#!">Выход</a></li>
-                                        </ul>
+    <div class="container">
+        <!--   Header-->
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="{% url 'index' %}">
+                    <img src="{% static 'img/Yasna_Gora.jpg' %}" width="75" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Переключатель навигации"><span
+                        class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'index' %}">Главная</a>
+                        </li>
+                    </ul>
+                    <div class="d-flex">
+                        <form class="d-flex" role="search" method="get" action="#!">
+                            <input name="q" class="form-control me-2" type="search" placeholder="Поиск"
+                                   aria-label="Поиск">
+                            <button class="btn btn-outline-success" type="submit">Поиск</button>
+                        </form>
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <!--  Users-->
+                            {% if not request.user.is_authenticated %}
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="{% url 'login' %}">Войти</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="{% url 'register' %}">Зарегистрироваться</a>
+                                </li>
+                                
+                            {% else %}
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                   data-bs-toggle="dropdown" aria-expanded="false">
+                                    Здравствуйте пользователь {{ request.user.username }}
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="#!">Моя страница</a></li>
+                                    <li><a class="dropdown-item" href="{% url 'add' %}">Добавить статью</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
                                     </li>
+                                    <li><a class="dropdown-item" href="{% url 'logout' %}">Выход</a></li>
                                 </ul>
-                            </div>
-                        </div>
+                            </li>
+                            {% endif %}
+                        </ul>
                     </div>
-                </nav>
+                </div>
             </div>
-        </header>
+        </nav>
+    </div>
+</header>
