--- a/main/templates/main/components/_category_buttons.html
+++ b/main/templates/main/components/_category_buttons.html
@@ -1,3 +1,3 @@
 <div class="list-group">
-    <a href="{% url 'category_list' category.pk %}" class="list-group-item list-group-item-action">{{ category }}</a>
+    <a href="{{ category.get_absolute_url }}" class="list-group-item list-group-item-action">{{ category }}</a>
 </div>
