--- a/main/templates/main/components/_post_list.html
+++ b/main/templates/main/components/_post_list.html
@@ -1,6 +1,6 @@
 <div class="card text-center">
     <div class="card-header">{{ post.category }}</div>
     <div class="card-body"><h5 class="card-title">{{ post }}</h5>
-        <p class="card-text">{{ post.content | truncatewords:20 }}</p><a href="#!" class="btn btn-primary">Подробнее</a></div>
+        <p class="card-text">{{ post.content | truncatewords:20 }}</p><a href="{{ post.get_absolute_url }}" class="btn btn-primary">Подробнее</a></div>
     <div class="card-footer text-muted">{{ post.created_at }}</div>
 </div>
