--- a/main/templates/main/article_add_form.html
+++ b/main/templates/main/article_add_form.html
@@ -4,12 +4,26 @@
     <div class="d-flex justify-content-center">
         <div class="card col-8 mb-4 mt-4">
             <div class="card-body">
-                <h2 class="text-center">Добавление новой статьи</h2>
+                <h2 class="text-center">
+                    {% if 'update' in request.path %}
+                        Изменение статьи
+                    {% else %}
+                        Добавление новой статьи
+                    {% endif %}
+
+                </h2>
                 <form action="" method="post" enctype="multipart/form-data">
                     <!--  Fields for filling-->
-                    {% csrf_token %} 
+                    {% csrf_token %}
                     {{ form.as_p }}
-                    <button class="btn btn-dark" type="submit">Добавить статью</button>
+                    <button class="btn btn-dark" type="submit">
+                        {% if 'update' in request.path %}
+                            Изменить статью
+                        {% else %}
+                            Добавить статью
+                        {% endif %}
+
+                    </button>
                 </form>
             </div>
         </div>
