--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
+{% load blog_tags %}
 
 {% block main %}
     <h2>Ясна Гура</h2>
     <div class="d-flex justify-content-between">
         <div class="col-3">
             <!-- Sidebar-->
+            {% get_all_categories as categories %}
             {% for category in categories %}
                 {% include 'main/components/_category_buttons.html' %}
             {% endfor %}
